<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        android:id="@+id/guideheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/userguide"
        android:ems="3"
        android:textStyle="bold" 
        android:gravity="center"/>

    <TextView
        android:id="@+id/guidetext" 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/guidetext"
        android:verticalScrollbarPosition="right"
        android:padding="10dip"
        />
   
      <LinearLayout 
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_weight="1"
          android:orientation="vertical"
          android:gravity="center">
    <Button 
        android:id="@+id/guideb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/guideb"
        android:onClick="back"
        
        />
    </LinearLayout>
   

</LinearLayout>
