<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.babythermo.MainActivity$PlaceholderFragment" 
    android:id="@+id/fragmentmain"
    android:background="@drawable/sky"
    >
    <LinearLayout 
        android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center">
    <LinearLayout 
      android:layout_width="0dp"
      android:layout_weight="1"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center">  </LinearLayout>
<LinearLayout 
    android:layout_width="0dp"
    android:layout_weight="2"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
   
   <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"        
        android:layout_marginTop="102dp"
        android:background="@drawable/custom_button"
        android:text="@string/start"
        android:onClick="start"
        />
   

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/alert"
		android:onClick="alert"
        android:background="@drawable/custom_button"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/guide"
        android:onClick="guide"
        android:background="@drawable/custom_button" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/stop"
        android:onClick="stop"
        android:background="@drawable/custom_button" />

</LinearLayout>
<LinearLayout 
    android:layout_width="0dp"
    android:layout_weight="1"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center"
    
    ></LinearLayout>
</LinearLayout>
</RelativeLayout>
